clear recently used files action
patch from timmydog

--- a/branches/maven-build/passwordsafe-parent/passwordsafe-swt/src/main/resources/org/pwsafe/passwordsafeswt/action/messages.properties
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-swt/src/main/resources/org/pwsafe/passwordsafeswt/action/messages.properties
@@ -9,6 +9,9 @@ ChangeSafeCombinationAction.Label = Change Safe Combination
 ClearClipboardAction.Label   = Clear Clipboard
 ClearClipboardAction.Tooltip = Clear Clipboard
 
+ClearMruFilesAction.Label = &Clear file list
+ClearMruFilesAction.Tooltip = Clears the list of recent files from the File menu
+
 CopyPasswordAction.Label   = Copy Password@Ctrl+C
 CopyPasswordAction.Tooltip = Copy Password To Clipboard
 
@@ -76,7 +79,8 @@ NewFileAction.Label   = &New File
 NewFileAction.Tooltip = Create New Safe
 
 OpenFileAction.ErrorDialog.Label    = Error Opening Safe
-OpenFileAction.ErrorDialog.Message  = Invalid Passphrase
+OpenFileAction.ErrorDialog.WrongPassphrase = Invalid Passphrase
+OpenFileAction.ErrorDialog.Message  = Could not open password store
 OpenFileAction.FilterLabel.AllFiles = All Files (*.*)
 OpenFileAction.FilterLabel.S3Files  = PasswordSafe S3 Files (*.pws3)
 OpenFileAction.FilterLabel.V2Files  = PasswordSafe v1/v2 Files (*.dat)
