--- a/branches/maven-build/passwordsafe-parent/passwordsafe-swt/src/main/resources/org/pwsafe/passwordsafeswt/action/messages_de.properties
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-swt/src/main/resources/org/pwsafe/passwordsafeswt/action/messages_de.properties
@@ -9,6 +9,9 @@ ChangeSafeCombinationAction.Label = Safe &Kombination \u00E4ndern
 ClearClipboardAction.Label   = Zwischenablage l\u00F6schen
 ClearClipboardAction.Tooltip = Zwischenablage mit Leerzeichen \u00FCberschreiben
 
+ClearMruFilesAction.Label = &Liste letzter Safes leeren
+ClearMruFilesAction.Tooltip = Leert die liste zuletzt genutzter Safes
+
 CopyPasswordAction.Label   = Password kopieren@Ctrl+C
 CopyPasswordAction.Tooltip = Kopiert das Passwort in die Zwischenablage
 
@@ -76,7 +79,8 @@ NewFileAction.Label   = &Neuer Safe
 NewFileAction.Tooltip = Erzeugt einen neuen Passwortsafe
 
 OpenFileAction.ErrorDialog.Label    = Safe \u00F6ffnen Fehler
-OpenFileAction.ErrorDialog.Message  = Falsche Safe Kombination
+OpenFileAction.ErrorDialog.WrongPassphrase=Falsche Safe Kombination
+OpenFileAction.ErrorDialog.Message  = Konnte den Passwortsafe nicht \u00F6ffnen
 OpenFileAction.FilterLabel.AllFiles = Alle Dateien (*.*)
 OpenFileAction.FilterLabel.S3Files  = PasswordSafe S3 Dateien (*.pws3)
 OpenFileAction.FilterLabel.V2Files  = PasswortSafe v1/v2 Dateien (*.dat)
@@ -87,9 +91,9 @@ OpenFileAction.Tooltip              = \u00D6ffnet einen vorhandenen Safe
 OpenFileReadWriteToggleAction.Label   = \u00D6ffnen mit Moduswechsel...
 OpenFileReadWriteToggleAction.Tooltip = \u00D6ffnet einen vorhandenen Safe mit umgekehrtem Schreib-Lese Modus.
 OpenFileReadWriteToggleAction.ReadWriteLabel = \u00D6ffnen (Beschreibbar)... 
-OpenFileReadWriteToggleAction.ReadWriteTooltip = Öffnet einen vorhandenen Safe im beschreibbaren Modus
-OpenFileReadWriteToggleAction.ReadOnlyLabel = \u00D6ffnen (Schreibgeschützt)... 
-OpenFileReadWriteToggleAction.ReadOnlyTooltip = Öffnet einen vorhandenen Safe im schreibgeschützten Modus
+OpenFileReadWriteToggleAction.ReadWriteTooltip = \u00D6ffnet einen vorhandenen Safe im beschreibbaren Modus
+OpenFileReadWriteToggleAction.ReadOnlyLabel = \u00D6ffnen (Schreibgesch\u00FCtzt)...
+OpenFileReadWriteToggleAction.ReadOnlyTooltip = \u00D6ffnet einen vorhandenen Safe im schreibgesch\u00FCtzten Modus
 
 OpenUrlAction.Label   = Ur&l \u00F6ffnen@Ctrl+L
 OpenUrlAction.Tooltip = Falls gesetzt wird die URL im bevorzugten Webbrowser ge\u00F6ffnet
