--- a/branches/maven-build/passwordsafe-parent/passwordsafe-swt/src/main/resources/org/pwsafe/passwordsafeswt/preference/messages_de.properties
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-swt/src/main/resources/org/pwsafe/passwordsafeswt/preference/messages_de.properties
@@ -24,7 +24,7 @@ PasswordPolicyPreferences.Symbols        = Sonderzeichen (z.B. %, $ usw.) verwen
 PasswordPolicyPreferences.Uppercase      = GROSSBUCHSTABEN verwenden
 
 SecurityPreferences.ClearClipOnMinimize   = Zwischenablage beim Minimieren oder Beenden l\u00F6schen
-SecurityPreferences.ConfirmClipCopy       = Kopieren in die Zwischenalage best\u00E4tigen
+SecurityPreferences.ConfirmClipCopy       = Kopieren in die Zwischenablage best\u00E4tigen
 SecurityPreferences.ConfirmSaveOnMinimize = Abspeichern beim Minimieren best\u00E4tigen
 SecurityPreferences.IdleMinutes           = Minuten Nichtbenutzung
 SecurityPreferences.LockOnCompLock        = Passwortsafe beim Sperren des Computers sperren
